--- a/assets/style.css
+++ b/assets/style.css
@@ -13,9 +13,7 @@ html, body{
 }
 #content{
 	display: table;
-	margin: 0 auto;
-  padding: 0 0 60px;
-
+	margin: 0 10px;
   background: #fff;
   color: #000;
 }
