--- a/assets/style.css
+++ b/assets/style.css
@@ -10,42 +10,50 @@ html, body{
 	min-height: 100%;
 	background-color: #ffffff;
 	text-align: center;
+    background-image: url(https://selfie.iss.show/generator/assets/bg.jpg);
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 #content{
 	display: table;
-	margin: 20px auto;
-
-  background: #fff;
+	margin: 0px auto;
+  background: #ffffff00;
   color: #000;
 }
 #preview_panel{
 	position: relative;
 	display: inline-block;
-	background: #fff;
-  border: 1px solid #333;
+	background: #ffffff00;
+  border: 0px solid #333;
   height: 100%;
   width: 99%;
 }
-#download{
-  padding: 10px 20px;
-  background: #ff0000;
-  color: #ffffff;
-  font-size: 1em;
-  border-radius: 10px;
-  outline: none;
+#download {
+    padding: 10px 20px;
+    background: #31a700;
+    color: #ffffff;
+    font-size: 1.4em;
+    border-radius: 50px;
+    outline: none;
+    border-width: 0px;
+    cursor: pointer;
 }
 #download[disabled]{
   background: #CCC;
   color: #EEE;
   border: none;
+  border-width: 0px;
+  cursor: not-allowed;
 }
 .design{
   height: 100px;
-  border: 5px dashed #CCC;
+  border: 1px solid #CCC;
   cursor: pointer;
 }
 .design.active{
-  border: 5px dashed #000;
+  border: 1px solid #000;
 }
 @media screen and (max-width: 970px){
   .design{
